# blackmarlin

./: .gitignore  Cargo.toml  README.md  build.rs  makefile
.cargo/: config.toml
blackmarlin/: Cargo.toml  build.rs
blackmarlin/src/: lib.rs
blackmarlin/src/bm/: mod.rs
blackmarlin/src/bm/bm_runner/: ab_runner.rs  time.rs
blackmarlin/src/bm/bm_search/: mod.rs  search.rs
blackmarlin/src/bm/bm_util/: lookup.rs  mod.rs  position.rs  t_table.rs  (+1 more)
datagen/: Cargo.toml
datagen/src/: datagen.rs  main.rs
filter/: Cargo.toml
filter/src/: main.rs
src/: bm.rs  main.rs
src/bm/: bm_console.rs  bm_eval.rs  bm_runner.rs  bm_search.rs  bm_util.rs  cecp.rs  cli.rs  core.rs  nnue.rs  policy.rs  search.rs  uci.rs  util.rs
src/bm/bm_console/: gen_eval.rs  gen_fen.rs  grad.rs  mod.rs  search_tuner.rs
src/bm/bm_eval/: basic_eval.rs  basic_eval_consts.rs  eval.rs  eval_access.rs  eval_consts.rs  evaluator.rs  mod.rs
src/bm/bm_runner/: ab_consts.rs  ab_runner.rs  config.rs  mod.rs  runner.rs  time.rs
src/bm/bm_search/: adapt.rs  fail_cache.rs  fast_gen.rs  mod.rs  move_cache.rs  move_entry.rs  move_gen.rs  policymap.txt  q_move_gen.rs  reduction.rs  search.rs  see.rs  tactics.rs  threats.rs  threshold.rs  time.rs  window.rs
src/bm/bm_util/: access.rs  c_hist.rs  c_move.rs  ch_table.rs  counter_move.rs  diagnostics.rs  endgame.rs  eval.rs  eval_table.rs  evaluator.rs  frc.rs  h_table.rs  history.rs  lookup.rs  mod.rs  move_table.rs  position.rs  prune_table.rs  refutation.rs  scaling.rs  t_table.rs  table_types.rs  tactics.rs  threats.rs  window.rs  xor_set.rs  zobrist.rs
src/bm/cecp/: cecp_adapter.rs  mod.rs
src/bm/cli/: gen_eval.rs
src/bm/core/: config.rs  time.rs
src/bm/nnue/: include.rs  layers.rs  mod.rs  neon.rs  normal.rs
src/bm/search/: move_gen.rs  see.rs
src/bm/uci/: command.rs  mod.rs
src/bm/util/: history.rs  history_new.rs  position.rs  tt.rs  window.rs
uci/: Cargo.toml
uci/src/: bench.rs  command.rs  main.rs  uci.rs
(+2 files in other folders)
