[package]
name = "blackmarlin"
version = "0.1.0"
authors = ["doruk <dsekercioglu2003@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[dependencies]
chess = "3.2.0"
text_io = "0.1.8"
arrayvec = "0.7.1"
regex = "1.5.4"
rand = "0.8.4"
rand_distr = "0.4.2"

[features]
data = []
trace = []
nnue = []
