[package]
name = "blackmarlin"
version = "0.1.0"
authors = ["doruk <dsekercioglu2003@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
cozy-chess = "0.3.1"
arrayvec = "0.7.1"
cfg-if = "1.0.0"
