[package]
name = "datagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blackmarlin = { path = "../blackmarlin" }
clap = { version = "4.5.1", features = ["derive"] }
cozy-chess = "0.3.1"
arrayvec = "0.7.1"

rand = "0.8.4"
rand_distr = "0.4.2"
threadpool = "1.8.1"
